# cpm-hello-world

./: CMakeLists.txt
hello-world/: helloworld.h
hello-world/src/: helloworld.c  main.c
